Add HomePageFeature with Login

--- a/src/View/Game/indexgame.html.twig
+++ b/src/View/Game/indexgame.html.twig
@@ -1,5 +1,5 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Nique les pangolins.</h1>
+    <h1>Salut jeune {{ sessions.pseudo }}</h1>
 {% endblock %}
