--- a/src/View/Game/indexgame.html.twig
+++ b/src/View/Game/indexgame.html.twig
@@ -7,7 +7,7 @@
             <div class="card-body">
                 <h4 class="card-title">Le rêve américain</h4>
                 <p class="card-text">dans ce Quizz nous allons parler des différants animaux que nous pouvons trouver sur le continent américain, est tu prêt ? </p>
-                <button type="button" class="btn btn-warning">Lets GO !</button>
+                <a type="button" class="btn btn-warning" href="/Game/gameone_1">Lets GO !</a>
             </div>
         </div>
         <div class="card">
@@ -15,7 +15,7 @@
             <div class="card-body">
                 <h4 class="card-title">En terre inconnu</h4>
                 <p class="card-text">À l'Afrique se merveilleux continent autant que dans la culture qu'avec ses animaux, les plus terrifiant mais aussi les plus mignon !</p>
-                <button type="button" class="btn btn-warning">Ya tafi</button>
+                <a type="button" class="btn btn-warning" href="/Game/gametwo_1">Ya tafi</a>
             </div>
         </div>
         <div class="card">
@@ -23,7 +23,7 @@
             <div class="card-body">
                 <h4 class="card-title">Mille est une culture</h4>
                 <p class="card-text">L'Asie, le continent des nems nems nems nems et du malheureux kim jung un  </p>
-                <button type="button" class="btn btn-warning">Commencez l'invasion</button>
+                <a type="button" class="btn btn-warning button-card" href="/Game/gamethree_1">Commencez l'invasion</a>
             </div>
         </div>
     </div>
