--- a/src/View/Game/header.html.twig
+++ b/src/View/Game/header.html.twig
@@ -1,1 +1,1 @@
-{% block header %}<button>Menu Principal</button>{% endblock %}git
+{% block header %}<button class="button-card">Menu Principal</button>{% endblock %}git
