--- a/src/View/Game/indexgame.html.twig
+++ b/src/View/Game/indexgame.html.twig
@@ -23,7 +23,7 @@
             <div class="card-body">
                 <h4 class="card-title">Mille est une culture</h4>
                 <p class="card-text">L'Asie, le continent des nems nems nems nems et du malheureux kim jung un  </p>
-                <a type="button" class="btn btn-warning button-card" href="/Game/gamethree_1">Commencez l'invasion</a>
+                <a type="button" class="btn btn-warning" href="/Game/gamethree_1">Commencez l'invasion</a>
             </div>
         </div>
     </div>
