Add FinalGameCam features with Eagle

--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -16,11 +16,11 @@
                     </div>
             <div class="offset-4 col-4 formulaire">
     <form action="/game/index" method="POST">
-        <div class="form-group">
+        <div class="form-group text-center">
             <i class="fa iconhome fa-child"></i><i class="fa iconhome fa-map"></i><i class="fa iconhome fa-compass"></i><i class="fa iconhome fa-plane"></i>
             <label for="pseudo"></label>
-            <input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="Pseudo" required>
-            <small class="pl-2"      id="pseudoHelp" >Ecrivez votre pseudo avant de commencer à jouer</small>
+            <input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="Prenom" required>
+            <small id="pseudoHelp" >Ecrit ton prénom avant de commencer</small>
         </div>
         <button type="submit" class="btn btn-success homebutton">Commencer l'aventure <i class="fa homeimage fa-globe"></i> </button>
     </form>
