--- a/src/View/Game/header.html.twig
+++ b/src/View/Game/header.html.twig
@@ -1,1 +1,4 @@
-{% block header %}<button class="button-card">Menu Principal</button>{% endblock %}git
+{% block header %}
+    <a class="button-card" href="../Home/index">Menu Principal</a>
+    <p>Bonjour {{ sessions.pseudo }}</p>
+{% endblock %}
