--- a/src/View/Game/indexgame.html.twig
+++ b/src/View/Game/indexgame.html.twig
@@ -1,9 +1,9 @@
 {% extends 'layout.html.twig' %}
 {% block header %}{% include 'Game/header.html.twig' %}{% endblock %}
 {% block content %}
-    <div class="card-deck ">
+    <div class="card-deck">
         <div class="card" >
-            <img class="card-img-top" src="#">
+            <img class="card-img-top" src="/../assets/images/aigle.png">
             <div class="card-body">
                 <h4 class="card-title">Le rêve américain</h4>
                 <p class="card-text">dans ce Quizz nous allons parler des différants animaux que nous pouvons trouver sur le continent américain, est tu prêt ? </p>
