--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-{% block header %}{% endblock %}
+{% block header %}{% include 'Game/header.html.twig' %}{% endblock %}
 {% block content %}{% endblock %}
 
 {% block javascript %}
