--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'layout.html.twig' %}
-
+{% block header %}{% endblock %}
 {% block content %}
     <div class="container-fluid">
         <div class="row">
