--- a/src/View/Game/gameone_victoire.html.twig
+++ b/src/View/Game/gameone_victoire.html.twig
@@ -1,18 +1,19 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <div class="container-fluid">
+    <div class="container-fluid mt-4">
         <div class="row">
-            <div class="col-4 description">
-            <h1>Le Pygargue à tête blanche <i class="fa iconfinal fa-star"></i></h1>
-                <p>Le pygargue à tête blanche, aussi appelé aigle américain ou aigle à tête blanche, est un rapace d'Amérique du Nord</p>
-                <p>Facile à reconnaître avec sa queue blanche et sa tête blanche,il est un emblème des États-Unis  Il vit environ 20 ans.</p>
-                <p>L'aigle américain est le plus grand chasseur du ciel, il se nourrit principalement de poisson, mais il peut lui arriver de chasser de petites comme de grandes proies lorsqu'il se trouve à l'interieur des terres.(lapins, oiseaux, pingouins...). </p>
+            <div class="col-4 ml-5 description">
+                <div class="">
+                    <h1><i class="fa iconfinal fa-star"></i> Le Pygargue à tête blanche</h1>
+                    <p>Le pygargue à tête blanche, aussi appelé aigle américain ou aigle à tête blanche, est un rapace d'Amérique du Nord</p>
+                    <p>Facile à reconnaître avec sa queue blanche et sa tête blanche,il est un emblème des États-Unis  Il vit environ 20 ans.</p>
+                    <p>L'aigle américain est le plus grand chasseur du ciel, il se nourrit principalement de poisson, mais il peut lui arriver de chasser de petites comme de grandes proies lorsqu'il se trouve à l'interieur des terres.(lapins, oiseaux, pingouins...). </p>
+                </div>
             </div>
-                <div class="col-4">
-                    <iframe class="video" width="800" height=600 src="https://www.youtube.com/embed/UmclL6funN8?&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            </div>
+            <div class="col-7 ml-4">
+                    <iframe class="video" src="https://www.youtube.com/embed/UmclL6funN8?&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
-
-
 {% endblock %}
