--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -7,11 +7,10 @@
             <h1 class="hometitle text-center">Voyagez Malin !</h1>
             </div>
                     <div class="col-8 offset-2">
-                       <p class="hometext text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore magnam
-                           nemo quod sint temporibus. Accusamus consectetur cum doloremque expedita,
-                           explicabo, id ipsam iste itaque iure nostrum perferendis placeat,
-                           quas qui?Aperiam corporis deleniti dignissimos.
+                       <p class="hometext text-center">Ce n'est pas parce qu'on est en période de confinement
+                           qu'il faut s'empêcher de voyager, <br>au contraire. Et Voyager Malin est là pour t'aider !
+                           Si tu as entre 7 et 11 ans, tu peux <br>te lancer dans l'une de nos trois aventures... Avec
+                           une surprise à la clé !
                        </p>
                     </div>
             <div class="offset-4 col-4 formulaire">
@@ -19,8 +18,8 @@
         <div class="form-group text-center">
             <i class="fa iconhome fa-child"></i><i class="fa iconhome fa-map"></i><i class="fa iconhome fa-compass"></i><i class="fa iconhome fa-plane"></i>
             <label for="pseudo"></label>
-            <input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="Prenom" required>
-            <small id="pseudoHelp" >Ecrit ton prénom avant de commencer</small>
+            <input type="text" class="form-control" id="pseudo" name="pseudo" placeholder="Écris ici ton prénom" required>
+
         </div>
         <button type="submit" class="btn btn-success homebutton">Commencer l'aventure <i class="fa homeimage fa-globe"></i> </button>
     </form>
