--- a/src/View/Game/gametwo_5.html.twig
+++ b/src/View/Game/gametwo_5.html.twig
@@ -9,30 +9,29 @@
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Question question question question question question question question question
-                        question question question ?</p>
+                    <p>Combien de kilos pèse la trompe d'un éléphant ?</p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-star icones-reponse"></i>  Réponse 1</p>
+                        <p><i class="fa fa-star icones-reponse"></i>  100 kg</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Réponse 2</p>
+                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  25 kg</p>
                     </div>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-plane icones-reponse"></i>  Réponse 3</p>
+                        <p><i class="fa fa-plane icones-reponse"></i>  50 kg</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Réponse 4</p>
+                        <p><i class="fa fa-square icones-reponse ml-5"></i>  75 kg</p>
                     </div>
                 </div>
                 <div class="text-center mt-4">
-                    <p>Cliques sur la bonne image !</p>
+                    <p>Clique sur la bonne image !</p>
                 </div>
                 <div class="icones-jeu text-center pb-2">
-                    <a href="" data-toggle="modal" data-target="#exampleModalCenter">
+                    <a href="" data-toggle="modal" data-target="#goodanswer">
                         <i class="fa fa-star"></i>
                     </a>
                     <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
@@ -41,7 +40,7 @@
                     <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-plane"></i>
                     </a>
-                    <a href="" class="pl-5" data-toggle="modal" data-target="#goodanswer">
+                    <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-square"></i>
                     </a>
                 </div>
@@ -56,7 +55,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            Retentes ta chance !
+                            Retente ta chance !
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
@@ -74,10 +73,10 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            <p>Eh oui, la trompe de l'éléphant pèse bien 100 kg ! Elle lui  sert à respirer, ou encore à attraper son repas et le porter à sa bouche.</p>
                         </div>
                         <div class="modal-footer">
-                            <a type="button" href="/game/gametwo_victoire" class="btn btn-primary">Cliques vite ici !</a>
+                            <a type="button" href="/game/gametwo_victoire" class="btn btn-primary">Clique vite ici !</a>
                         </div>
                     </div>
                 </div>
