--- a/src/View/Game/gametwo_2.html.twig
+++ b/src/View/Game/gametwo_2.html.twig
@@ -9,27 +9,26 @@
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Question question question question question question question question question
-                        question question question ?</p>
+                    <p>Qu'y a-t-il dans la bosse d'un dromadaire ?</p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-star icones-reponse"></i>  Réponse 1</p>
+                        <p><i class="fa fa-star icones-reponse"></i>  De l'eau</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Réponse 2</p>
+                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  De la nourriture</p>
                     </div>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-plane icones-reponse"></i>  Réponse 3</p>
+                        <p><i class="fa fa-plane icones-reponse"></i>  De la graisse</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Réponse 4</p>
+                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Du muscle </p>
                     </div>
                 </div>
                 <div class="text-center mt-4">
-                    <p>Cliques sur la bonne image !</p>
+                    <p>Clique sur la bonne image !</p>
                 </div>
                 <div class="icones-jeu text-center pb-2">
                     <a href="" data-toggle="modal" data-target="#exampleModalCenter">
@@ -38,10 +37,10 @@
                     <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-circle"></i>
                     </a>
-                    <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
+                    <a href="" class="pl-5" data-toggle="modal" data-target="#goodanswer">
                         <i class="fa fa-plane"></i>
                     </a>
-                    <a href="" class="pl-5" data-toggle="modal" data-target="#goodanswer">
+                    <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-square"></i>
                     </a>
                 </div>
@@ -56,7 +55,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            Retentes ta chance !
+                            Retente ta chance !
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
@@ -74,7 +73,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            <p>c'est de la graisse qui est présent sur la bosse des dromadaires, ceci sont des réserve  d'énergie.</p>
                         </div>
                         <div class="modal-footer">
                             <a type="button" href="/game/gametwo_3" class="btn btn-primary">Question suivante</a>
