--- a/src/View/Game/gametwo_victoire.html.twig
+++ b/src/View/Game/gametwo_victoire.html.twig
@@ -1,5 +1,19 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <p>Le bloc de la webcam</p>
+    <div class="container-fluid mt-4">
+        <div class="row">
+            <div class="col-4 ml-5 description">
+                <div class="">
+                    <h1><i class="fa iconfinal fa-star"></i> L'éléphant d'Afrique</h1>
+                    <p>Les éléphants sont les plus gros animaux terrestres, leur poids est égal à celui d'un petit camion, soit 7 tonnes.</p>
+                    <p>Leurs incisives supérieures se sont développées en défenses pouvant mesurer 2,5 m et peser 60 kg. Elles sont présentes chez la femelle comme chez le mâle.</p>
+                    <p>Leur régime alimentaire est de type végétarien : feuilles, racines, écorces, herbes. Chaque jour ils peuvent consommer de 100 à 300 kg de nourriture et boire jusqu’à 190 litres d’eau. </p>
+                </div>
+            </div>
+            <div class="col-7 ml-4">
+                <iframe class="video" src="https://www.youtube.com/embed/48MFrf5ADp8?&autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
 {% endblock %}
