--- a/src/View/Game/gameone_3.html.twig
+++ b/src/View/Game/gameone_3.html.twig
@@ -4,35 +4,34 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center mb-4 mt-1 game-title">
-                <h1>Premier jeu</h1>
+                <h1>Le rêve américain</h1>
                 <h2>Question 3/5</h2>
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Question question question question question question question question question
-                        question question question ?</p>
+                    <p>Quel petit animal à la fourrure grise est très habile avec ses pattes avant ?</p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-star icones-reponse"></i>  Réponse 1</p>
+                        <p><i class="fa fa-star icones-reponse"></i>  Le raton laveur</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Réponse 2</p>
+                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Le mulot</p>
                     </div>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-plane icones-reponse"></i>  Réponse 3</p>
+                        <p><i class="fa fa-plane icones-reponse"></i>  Le chat</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Réponse 4</p>
+                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Le glouton</p>
                     </div>
                 </div>
                 <div class="text-center mt-4">
-                    <p>Cliques sur la bonne image !</p>
+                    <p>Clique sur la bonne image !</p>
                 </div>
                 <div class="icones-jeu text-center pb-2">
-                    <a href="" data-toggle="modal" data-target="#exampleModalCenter">
+                    <a href="" data-toggle="modal" data-target="#goodanswer">
                         <i class="fa fa-star"></i>
                     </a>
                     <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
@@ -41,7 +40,7 @@
                     <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-plane"></i>
                     </a>
-                    <a href="" class="pl-5" data-toggle="modal" data-target="#goodanswer">
+                    <a href="" class="pl-5" data-toggle="modal" data-target="#exampleModalCenter">
                         <i class="fa fa-square"></i>
                     </a>
                 </div>
@@ -56,7 +55,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            Retentes ta chance !
+                            Retente ta chance !
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
@@ -74,7 +73,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            <p>C’est bien entendu le raton laveur !  Très intelligent, il n’hésite pas à se rapprocher de l’homme pour trouver de la nourriture.</p>
                         </div>
                         <div class="modal-footer">
                             <a type="button" href="/game/gameone_4" class="btn btn-primary">Question suivante</a>
