--- a/src/View/Game/indexgame.html.twig
+++ b/src/View/Game/indexgame.html.twig
@@ -8,8 +8,8 @@
                     <img class="card-img-top mt-3" src="https://s2.qwant.com/thumbr/0x0/5/f/633df7065f9dcb449ea13bfb38f2c005929b7518a5fb0cfd831ec295214949/150710_b609p_boucar_aigle-tete-blanche_sn635.jpg?u=http%3A%2F%2Fimg.src.ca%2F2015%2F07%2F10%2F635x357%2F150710_b609p_boucar_aigle-tete-blanche_sn635.jpg&q=0&b=1&p=0&a=1">
                     <div class="card-body">
                         <h4 class="card-title">Le rêve américain</h4>
-                        <p class="card-text">dans ce Quizz nous allons parler des différants animaux que nous pouvons trouver sur le continent américain, est tu prêt ? </p>
-                        <a type="button" class="btn btn-warning" href="/Game/gameone_1">Lets GO !</a>
+                        <p class="card-text">Dans ce mini-jeu, nous allons t'emmener dans les terres sauvages du continent américain. Es-tu prêt <br>à te lancer dans l'aventure ?</p>
+                        <a type="button" class="btn btn-warning" href="/Game/gameone_1">C'est parti !</a>
                     </div>
                 </div>
             </div>
@@ -17,9 +17,9 @@
                 <div class="card col-10 offset-1">
                     <img class="card-img-top mt-3" src="https://s1.qwant.com/thumbr/0x380/1/c/7a9a81ef6d840682af15cb769ab1d98da662fd7990f7ad944186411c7833df/maxresdefault.jpg?u=http%3A%2F%2Fi1.ytimg.com%2Fvi%2FwxHwcI3oMPU%2Fmaxresdefault.jpg&q=0&b=1&p=0&a=1">
                     <div class="card-body">
-                        <h4 class="card-title">En terre inconnu</h4>
-                        <p class="card-text">À l'Afrique se merveilleux continent autant que dans la culture qu'avec ses animaux, les plus terrifiant mais aussi les plus mignon !</p>
-                        <a type="button" class="btn btn-warning" href="/Game/gametwo_1">Ya tafi</a>
+                        <h4 class="card-title">En terre sauvage</h4>
+                        <p class="card-text">On retrouve en Afrique des animaux d'une diversité impressionnante. Penses-tu avoir les connaissances pour aller au bout de ce défi ?</p>
+                        <a type="button" class="btn btn-warning" href="/Game/gametwo_1">C'est parti !</a>
                     </div>
                 </div>
             </div>
@@ -27,9 +27,9 @@
                 <div class="card col-10 offset-1">
                     <img class="card-img-top mt-3" src="https://s1.qwant.com/thumbr/0x380/2/c/25e91e15c316dc521c965057187fb3faa116f7f1e3c6eaae7c07237dbc2df6/maxresdefault.jpg?u=https%3A%2F%2Fi.ytimg.com%2Fvi%2FtS4Un2l_Wy8%2Fmaxresdefault.jpg&q=0&b=1&p=0&a=1">
                     <div class="card-body">
-                        <h4 class="card-title">Mille est une culture</h4>
-                        <p class="card-text">L'Asie, le continent des nems nems nems nems et du malheureux kim jung un un dictateur qui bientôt sera mort  </p>
-                        <a type="button" class="btn btn-warning" href="/Game/gamethree_1">Commencez l'invasion</a>
+                        <h4 class="card-title">L'Asie paradis</h4>
+                        <p class="card-text">Des montagnes de Chine aux steppes mongoles, les animaux asiatiques n'auront bientôt plus aucun secrets pour toi !</p>
+                        <a type="button" class="btn btn-warning" href="/Game/gamethree_1">C'est parti !</a>
                     </div>
                 </div>
             </div>
