--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -8,8 +8,8 @@
             </div>
                     <div class="col-8 offset-2">
                        <p class="hometext text-center">Ce n'est pas parce qu'on est en période de confinement
-                           qu'il faut s'empêcher de voyager, <br>au contraire. Et Voyager Malin est là pour t'aider !
-                           Si tu as entre 7 et 11 ans, tu peux <br>te lancer dans l'une de nos trois aventures... Avec
+                           qu'il faut s'empêcher <br>de voyager, au contraire. Et Voyager Malin est là pour t'aider !
+                           Si tu as entre <br>7 et 11 ans, tu peux te lancer dans l'une de nos trois aventures... <br>Avec
                            une surprise à la clé !
                        </p>
                     </div>
