--- a/src/View/Game/gameone_1.html.twig
+++ b/src/View/Game/gameone_1.html.twig
@@ -4,32 +4,31 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 text-center mb-4 mt-1 game-title">
-                <h1>Premier jeu</h1>
+                <h1>Le rêve américain</h1>
                 <h2>Question 1/5</h2>
             </div>
             <div class="col-6 offset-3 game-card">
                 <div class="text-center m-2 pt-2">
-                    <p>Question question question question question question question question question
-                        question question question ?</p>
+                    <p>Quel carnivore peut-on croiser dans certains parc nationaux aux États-Unis ?</p>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-star icones-reponse"></i>  Réponse 1</p>
+                        <p><i class="fa fa-star icones-reponse"></i>  Le puma</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Réponse 2</p>
+                        <p><i class="fa fa-circle icones-reponse ml-5"></i>  Le lynx</p>
                     </div>
                 </div>
                 <div class="row text-center d-flex justify-content-center">
                     <div>
-                        <p><i class="fa fa-plane icones-reponse"></i>  Réponse 3</p>
+                        <p><i class="fa fa-plane icones-reponse"></i>  Le loup</p>
                     </div>
                     <div>
-                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Réponse 4</p>
+                        <p><i class="fa fa-square icones-reponse ml-5"></i>  Les trois</p>
                     </div>
                 </div>
                 <div class="text-center mt-4">
-                    <p>Cliques sur la bonne image !</p>
+                    <p>Clique sur la bonne image !</p>
                 </div>
                 <div class="icones-jeu text-center pb-2">
                     <a href="" data-toggle="modal" data-target="#exampleModalCenter">
@@ -56,7 +55,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            Retentes ta chance !
+                            Retente ta chance !
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Retour</button>
@@ -74,7 +73,7 @@
                             </button>
                         </div>
                         <div class="modal-body">
-                            ...
+                            <p>Eh oui, les trois ! Mais il est très rare d’en croiser un, car ils évitent le plus souvent de croiser la route des hommes.</p>
                         </div>
                         <div class="modal-footer">
                             <a type="button" href="/game/gameone_2" class="btn btn-primary">Question suivante</a>
